cha-pre-live-flux2/cha-eks-5b/namespaces/tesla-systest/network-policy-apps.yaml
####################################################
## Allow ingress from tesla-systest and icis-ingress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-tesla-systest
  namespace: tesla-systest
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: tesla-systest
    - namespaceSelector:
        matchLabels:
          name: icis-ingress

#################################
## Allow egress from tesla-systest ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-tesla-systest
  namespace: tesla-systest
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: tesla-systest

#########################################
## Allow external http traffic egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-http-external
  namespace: tesla-systest
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP

#################################################

---

################
## ICIS monitoring ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-icis-monitoring
  namespace: tesla-systest
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: icis-monitoring

## Allow SQL Server egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-sql-server
  namespace: tesla-systest
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 1433
      protocol: TCP

#################################################
## Allow external http traffic egress to IDDN  ##
#################################################

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-iddn
  namespace: tesla-systest
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "tesla-tardis"
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.32.0/21
    ports:
    - port: 9000
      protocol: TCP
    - port: 9100
      protocol: TCP

##################################################
## Allow traffic to confluent cloud peered VPC  ##
##################################################

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-confluent
  namespace: tesla-systest
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "tesla-kafkapublisher"
  egress:
  - to:
    - ipBlock:
        cidr: 172.16.0.0/16
    ports:
    - port: 443
      protocol: TCP
    - port: 9092
      protocol: TCP

###################################
## Allow traffic egress to SMTP  ##
###################################

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-smtp
  namespace: tesla-systest
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "tesla-orchestrationservice"
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.16.0/24
    ports:
    - port: 25
      protocol: TCP
    - port: 587
      protocol: TCP
